  24 Oct 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile.patch, -ChangeLog,
  -gitlab-ci-multi-runner-1.4.1.ebuild, -gitlab-ci-multi-runner-1.5.0.ebuild,
  -gitlab-ci-multi-runner-1.6.0.ebuild, files/gitlab-ci-multi-runner.init,
  gitlab-ci-multi-runner-1.7.0.ebuild, metadata.xml:
  dev-vcs/gitlab-ci-multi-runner:  added source version of gitlab-ci-multi-
  runner; mostly copied from the mrueg overlay, but with some additional patches